--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.12"
+		"@astrojs/image": "^0.15.0",
+		"@astrojs/react": "^2.0.2",
+		"@astrojs/tailwind": "^3.0.1",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"astro": "^2.0.12",
+		"gsap": "^3.11.4",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"sharp": "^0.31.3",
+		"tailwindcss": "^3.2.6"
 	}
 }
