--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@astrojs/image": "^0.15.0",
 		"@astrojs/react": "^2.0.2",
 		"@astrojs/tailwind": "^3.0.1",
+		"@headlessui/react": "^1.7.13",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"astro": "^2.0.12",
